--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,15 @@ body {
   background-color: orange;
 }
 
-h2 {
-  font-size: 40px;
+.item {
+  cursor: pointer;
 }
 
 .item.completed {
   text-decoration: line-through;
   color: red;
+}
+
+h2 {
+  font-size: 40px;
 }
