--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,16 @@ body {
   color: red;
 }
 
+button {
+  border-radius: 25px;
+  border: 2px solid #3b21ad;
+  color: white;
+  background-color: blue;
+  padding: 20px;
+  width: 200px;
+  height: 100px;
+}
+
 h2 {
   font-size: 40px;
 }
